# django-migration-versions

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
migration_versions/: manage.py
migration_versions/migration_versions/: apps.py  asgi.py  models.py  set_migration_table.py  settings.py  urls.py  wsgi.py
migration_versions/migration_versions/migrations/: 0001_initial.py
