[tool.poetry]
name = "django-migration-versions"
version = "0.1.0"
description = ""
authors = ["Ivan Derkach"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
black = "^20.8b1"
flake8 = "^3.9.1"
isort = "^5.8.0"
pre-commit = "^2.12.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
